WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
237484
Web Inspector: [Cocoa] Continually opening and closing Web Inspector sometimes crashes
https://bugs.webkit.org/show_bug.cgi?id=237484
Summary
Web Inspector: [Cocoa] Continually opening and closing Web Inspector sometime...
Patrick Angle
Reported
2022-03-04 12:57:46 PST
<
rdar://82814846
>
Attachments
Patch v1.0
(4.38 KB, patch)
2022-03-04 13:54 PST
,
Patrick Angle
no flags
Details
Formatted Diff
Diff
Patch v1.1 - Remove now unnecessary dispatch from inside operation
(4.62 KB, patch)
2022-03-04 14:18 PST
,
Patrick Angle
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Patrick Angle
Comment 1
2022-03-04 13:54:06 PST
Created
attachment 453869
[details]
Patch v1.0
Patrick Angle
Comment 2
2022-03-04 14:18:13 PST
Created
attachment 453872
[details]
Patch v1.1 - Remove now unnecessary dispatch from inside operation
EWS
Comment 3
2022-03-04 17:02:26 PST
Committed
r290855
(
248087@main
): <
https://commits.webkit.org/248087@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 453872
[details]
.
Brent Fulgham
Comment 4
2022-06-23 14:30:45 PDT
***
Bug 231372
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug