Cherry-pick r290855. rdar://problem/82814846

Web Inspector: [Cocoa] Continually opening and closing Web Inspector sometimes crashes
    https://bugs.webkit.org/show_bug.cgi?id=237484

    Reviewed by Darin Adler.

    We need to handle operations on the main queue because `webView:stopURLSchemeTask:` will be called from the main
    queue, and we must not be in middle the operation when we get the request to stop said operation, otherwise we
    may attempt to call `[urlSchemeTask did*]`, which is not permitted after we have been asked to stop that task.
    If we add the operation for the `WKURLSchemeTask` to a different queue it is possible we will have already
    started the operation on a background queue while at the same time are receiving a request to stop that same
    `WKURLSchemeTask`.

    * UIProcess/Inspector/mac/WKInspectorResourceURLSchemeHandler.mm:
    (-[WKInspectorResourceURLSchemeHandler webView:startURLSchemeTask:]):
    (-[WKInspectorResourceURLSchemeHandler webView:stopURLSchemeTask:]):

    Canonical link: https://commits.webkit.org/248087@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@290855 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/245886.320@safari-613-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-613-branch@291647 268f45cc-cd09-0410-ab3c-d52691b4dbfc